# 3-course

./: .gitignore  .gitmodules  readme.md
3.1/: Description.md  matrix.cpp  matrix.h  profiler.h  tests.cpp  utils.h
3.2/: Description.md  matrix.cpp  matrix.h  solver.cpp  solver.h  test_runner.h  tests.cpp
3.3/: Description.md  main.cpp  matrix.cpp  matrix.h  solver.cpp  solver.h  tests.cpp  utils.cpp
3.4/: CMakeLists.txt  Description.md
3.4/src/: drawable.cpp  drawable.h  input.cpp  input.h  interpolation.h
3.5/: CMakeLists.txt  Description.md
3.5/src/: drawable.cpp  drawable.h  input.h  interpolation.cpp  interpolation.h  main.cpp  mathutils.h  types.h
